# software_challenge

./: .gitignore  CMakeLists.txt  README.md  SeekTurtle.action  distance.msg  package.xml  turtle_setter.cpp  turtlesim_launch.py  turtlesimlaunch.launch
action/: SeekTurtle.action  (+1 more)
action_tutorials_cpp/: CMakeLists.txt  package.xml
action_tutorials_cpp/include/action_tutorials_cpp/: visibility_control.h
action_tutorials_cpp/src/: waypoint_action_server.cpp
catkin_ws/src/software_training_assignment/: CMakeLists.txt  package.xml
catkin_ws/src/software_training_assignment/action/: move_moving_turtle.action
catkin_ws/src/software_training_assignment/launch/: turtle.launch
catkin_ws/src/software_training_assignment/msg/: Distance.msg  distance.msg
catkin_ws/src/software_training_assignment/src/: main_node.cpp  move_turtle_action.cpp  reset_moving_turtle.cpp  spawn_turtle.cpp  spawn_turtle.h
onboarding_assignment/: CMakeLists.txt  package.xml
onboarding_assignment/src/: DistancePublisher.cpp  MainNode.cpp  ResetServer.cpp
software_training/: CMakeLists.txt  package.xml
software_training/action/: Waypoint.action  action.action  software_training_action.action
software_training/include/software_training/: clear_turtles_server.hpp  move_to_waypoint_action_server.hpp  move_turtle1_in_circle_publisher.hpp  reset_moving_turtle_server.hpp  spawn_turtles_server.hpp  turtle_distance_publisher.hpp  visibility_control.h
software_training/launch/: software_training.launch  software_training.launch.py
software_training/msg/: Distance.msg  software_training_message.msg
software_training/src/: action.cpp  addTurtle.cpp  clear_turtles_server.cpp  move_to_waypoint_action_server.cpp  move_turtle1_in_circle_publisher.cpp  moving_turtle_action_node.cpp  moving_turtle_service.cpp  reset_moving_turtle_server.cpp  service.cpp  software_training_node.cpp  spawn_turtles_server.cpp  talker.cpp  trainingNode.cpp  turtle_distance_publisher.cpp
software_training_assignment/: .gitignore  CMakeLists.txt  Instructions  Instructions.md  MoveTurtle.action  README.md  package.xml
software_training_assignment/action/: Goto.action  Move.action  MoveTo.action  MoveTurtle.action  Software.action  Waypoint.action  moveTurtle.action  toWaypoint.action
software_training_assignment/actionlib_msgs/: CMakeLists.txt  package.xml
software_training_assignment/config/: background_param.yaml
software_training_assignment/include/: clear_turtle.hpp  move_turtle_server.hpp  reset_moving.hpp  rotate_turtle1.hpp  spawn_turtle.hpp  stationary_position_publisher.hpp  turtle_info.hpp  visibility.h
software_training_assignment/include/software_training_assignment/: action_client.hpp  action_turtle.hpp  clear_turtles.hpp  reset_moving_turtle.hpp  spawn_turtle_nodelet.hpp  turtle_circle_publisher.hpp  turtle_publisher.hpp
software_training_assignment/launch/: background.launch  hello.launch  launcher.launch  sw_mem_challenge.launch  testlaunch.py  training.launch.py  turtlebackground.launch  turtlelaunch.py  turtlemimic.launch  turtlesim.launch
software_training_assignment/msg/: Disp.msg  Distance.msg  PositionData.msg  TurtleDist.msg  TurtleDistance.msg  tDistance.msg  turtleDistances.msg
software_training_assignment/src/: DistancePublisher.cpp  DistancePublisher.h  MoveTurtleActionTester.cpp  MovingTurtle.cpp  MovingTurtle.h  StationaryTurtle.cpp  StationaryTurtle.h  Turtle.cpp  Turtle.h  action_client.cpp  action_server.cpp  action_turtle.cpp  assignment.cpp  clear_turtle.cpp  clear_turtles.cpp  distance.cpp  goto_action.h  killTurtles.cpp  killTurtles.h  main.cpp  moveTurtle.cpp  move_turtle_client.cpp  move_turtle_server.cpp  my_turtlesim_node.cpp  position_data_publisher.cpp  publisher.h  resetPos.cpp  resetPos.h  resetTurtle.cpp  reset_moving.cpp  reset_moving_turtle.cpp  reset_test.cpp  rotate_turtle1.cpp  simple_action_client.cpp  software_training_assignment_node.cpp  spawnTurtles.cpp  spawnTurtles.h  spawn_turtle.cpp  spawn_turtle_nodelet.cpp  spawn_turtles.cpp  (+17 more)
software_training_assignment/src/turtlesim_editor/: CMakeLists.txt  package.xml
software_training_assignment/src/turtlesim_editor/action/: turtlesim.action
software_training_assignment/src/turtlesim_editor/include/turtle/: turtle.h
software_training_assignment/src/turtlesim_editor/msg/: distance.msg
software_training_assignment/src/turtlesim_editor/src/: turtle.cpp  turtlesim_clear.cpp  turtlesim_move.cpp  turtlesim_spawn.cpp
software_training_assignment/src/turtlesim_editor/srv/: moveback.srv
software_training_assignment/srv/: resetTurtle.srv
software_training_assingment/: CMakeLists.txt  package.xml
software_training_assingment/action/: Wayward.action
software_training_assingment/install/: local_setup.sh  setup.sh  setup.zsh
software_training_assingment/install/software_training_assingment/lib/software_training_assingment/: client  create_turtles
software_training_assingment/launch/: launch.py
software_training_assingment/log/: latest_build
software_training_assingment/src/: circ_motion.cpp  clear_turtles.cpp  reset_moving_turtle.cpp  spawn_turtles.cpp  turtle_dist.cpp  wayward.cpp
software_training_assingment/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
software_training_assingment/src/log/: latest_build
src/challenge_package/: CMakeLists.txt
src/challenge_package/action/: Move.action
src/challenge_package/include/challenge_package/: common.hpp
src/challenge_package/launch/: launch.py
src/challenge_package/src/: clear_turtles.cpp  move_action.cpp  move_action_client.cpp  move_action_server.cpp  move_circle.cpp  publisher_dist.cpp  reset_turtle.cpp  spawn_turtles.cpp
swtraining/: CMakeLists.txt  package.xml
swtraining/action/: Waypt.action
swtraining/include/swtraining/: clearturtles.hpp  drawCircle.hpp  resetturtle.hpp  software_training_visibility.h  spawnturtles.hpp  turtledistance.hpp  waypoint.hpp
swtraining/launch/: sw.launch.py
swtraining/src/: clearturtles.cpp  drawCircle.cpp  resetturtle.cpp  spawnturtles.cpp  turtledistance.cpp  waypoint.cpp
(+159 files in other folders)
