<?xml version="1.0"?>
<package format="2">
  
  <name>software_training_assignment</name>
  <version>0.0.0</version>
  <description>The software_training_assignment package</description>

  <maintainer email="ss25sand@uwaterloo.ca">Sam Sandhu</maintainer>

  <license>TODO</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <exec_depend>message_runtime</exec_depend>

</package>
